// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox defaultChecked 1`] = `
<div
  class="za-checkbox theme-primary checked"
>
  <div
    class="za-checkbox-wrapper"
  >
    <span
      class="za-checkbox-inner"
    />
    <span
      class="za-checkbox-text"
    >
      foo
    </span>
    <input
      checked=""
      class="za-checkbox-input"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox disabled 1`] = `
<div
  class="za-checkbox theme-primary disabled"
>
  <div
    class="za-checkbox-wrapper"
  >
    <span
      class="za-checkbox-inner"
    />
    <span
      class="za-checkbox-text"
    >
      foo
    </span>
    <input
      class="za-checkbox-input"
      disabled=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox renders correctly 1`] = `
<div
  class="za-checkbox theme-primary checked"
>
  <div
    class="za-checkbox-wrapper"
  >
    <span
      class="za-checkbox-inner"
    />
    <span
      class="za-checkbox-text"
    >
      foo
    </span>
    <input
      checked=""
      class="za-checkbox-input"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div
  class="za-checkbox-group"
>
  <div
    class="za-checkbox theme-primary"
  >
    <div
      class="za-checkbox-wrapper"
    >
      <span
        class="za-checkbox-inner"
      />
      <span
        class="za-checkbox-text"
      >
        选项一
      </span>
      <input
        class="za-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="za-checkbox theme-primary checked"
  >
    <div
      class="za-checkbox-wrapper"
    >
      <span
        class="za-checkbox-inner"
      />
      <span
        class="za-checkbox-text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="za-checkbox theme-primary"
  >
    <div
      class="za-checkbox-wrapper"
    >
      <span
        class="za-checkbox-inner"
      />
      <span
        class="za-checkbox-text"
      >
        选项三
      </span>
      <input
        class="za-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox.Group type is button 1`] = `
<div
  class="za-checkbox-group"
>
  <a
    aria-disabled="false"
    class="za-button za-checkbox theme-primary theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-checkbox-input"
        type="checkbox"
        value="0"
      />
      选项一
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-checkbox theme-primary theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-checkbox-input"
        type="checkbox"
        value="1"
      />
      选项二
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-checkbox theme-primary theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-checkbox-input"
        type="checkbox"
        value="2"
      />
      选项三
    </span>
  </a>
</div>
`;

exports[`Checkbox.Group type is cell 1`] = `
<div
  class="za-checkbox-group"
>
  <div
    class="za-cell is-link"
  >
    <div
      class="za-cell-inner"
    >
      <div
        class="za-cell-header"
      />
      <div
        class="za-cell-body"
      >
        <div
          class="za-cell-content"
        >
          <div
            class="za-checkbox theme-primary"
          >
            <div
              class="za-checkbox-wrapper"
            >
              <span
                class="za-checkbox-inner"
              />
              <span
                class="za-checkbox-text"
              >
                选项一
              </span>
              <input
                class="za-checkbox-input"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-cell-footer"
      />
    </div>
  </div>
  <div
    class="za-cell is-link"
  >
    <div
      class="za-cell-inner"
    >
      <div
        class="za-cell-header"
      />
      <div
        class="za-cell-body"
      >
        <div
          class="za-cell-content"
        >
          <div
            class="za-checkbox theme-primary"
          >
            <div
              class="za-checkbox-wrapper"
            >
              <span
                class="za-checkbox-inner"
              />
              <span
                class="za-checkbox-text"
              >
                选项二
              </span>
              <input
                class="za-checkbox-input"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-cell-footer"
      />
    </div>
  </div>
  <div
    class="za-cell is-link"
  >
    <div
      class="za-cell-inner"
    >
      <div
        class="za-cell-header"
      />
      <div
        class="za-cell-body"
      >
        <div
          class="za-cell-content"
        >
          <div
            class="za-checkbox theme-primary"
          >
            <div
              class="za-checkbox-wrapper"
            >
              <span
                class="za-checkbox-inner"
              />
              <span
                class="za-checkbox-text"
              >
                选项三
              </span>
              <input
                class="za-checkbox-input"
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-cell-footer"
      />
    </div>
  </div>
</div>
`;
